minor change to Nm equation

--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -91,7 +91,7 @@ always_allow_html: yes
 Θα υπολογιστεί ο συντελεστής διαφοροποίησης F~ST~ [@nei1987molecular], η γενετική απόσταση κατά Nei [-@Nei1978], καθώς και η γεωμετρική απόσταση Cavalli-Sforza [@cavalli1967phylogenetic] με το πακέτο hierfstat της R [@goudet_hierfstat_2005]. Οι πολυμεταβλητές αναλύσεις PCA, CA και η ανάλυση μοριακής διακύμανσης AMOVA θα διεξαχθούν με το πακέτο adegenet [@Jombart2008]. Το λογισμικό Structure [@pritchard_inference_2000], αλλά και η πολυμεταβλητή ανάλυση DAPC [@Jombart2010] (σε περιβάλλον R) θα χρησιμοποιηθoύν για την περαιτέρω διερεύνηση της διαφοροποίησης των δύο πληθυσμών. H DAPC ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν οι παραδοχές που απαιτεί το Structure δεν ικανοποιούνται (π.χ. ανισορροπία Hardy-Weinberg).
 
 #### _Γονιδιακή ροή_
-Ο αριθμός των μεταναστών θα εκτιμηθεί αρχικά σύμφωνα με το κλασσικό μοντέλο $Nm = [(1 / F~ST~) - 1] / 4$ [@frankham_introduction_2002]. Ωστόσο, αποτελεί παραδοχή της μεθόδου ότι η μετανάστευση είναι τάξεις μεγεθους μεγαλύτερη σε σχέση με τις μεταλλάξεις. Λόγω του υψηλού ρυθμού μεταλλάξεων που χαρακτηρίζει τους μικροδορυφόρους (περίπου $5 * 10^{-4}$)  [@whittaker_likelihood-based_2003] αυτή η παραδοχή ενδέχεται να παραβιάζεται [@whitlock_gst_2011]. Για το λόγο αυτό, ο αριθμός των μεταναστών θα υπολογιστεί και με τη χρήση των εξειδικευμένων λογισμικών (coalescent-based models) Migrate [@beerli_maximum_2001] και MIGRAINE [@de_iorio_stepwise_2005].
+Ο αριθμός των μεταναστών θα εκτιμηθεί αρχικά σύμφωνα με το κλασσικό μοντέλο $Nm = [(1 / F_{ST}) - 1] / 4$ [@frankham_introduction_2002]. Ωστόσο, αποτελεί παραδοχή της μεθόδου ότι η μετανάστευση είναι τάξεις μεγεθους μεγαλύτερη σε σχέση με τις μεταλλάξεις. Λόγω του υψηλού ρυθμού μεταλλάξεων που χαρακτηρίζει τους μικροδορυφόρους (περίπου $5 * 10^{-4}$)  [@whittaker_likelihood-based_2003] αυτή η παραδοχή ενδέχεται να παραβιάζεται [@whitlock_gst_2011]. Για το λόγο αυτό, ο αριθμός των μεταναστών θα υπολογιστεί και με τη χρήση των εξειδικευμένων λογισμικών (coalescent-based models) Migrate [@beerli_maximum_2001] και MIGRAINE [@de_iorio_stepwise_2005].
 
 
 ## Αναμενόμενα αποτελέσματα
