--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -24,7 +24,7 @@ lot: no
 mainfont: Liberation Serif
 # geometry: margin=2.54cm
 bibliography: library.bib
-csl: elsevier-harvard.csl
+csl: cell.csl
 always_allow_html: yes
 ---
 <!-- Things to fix in .tex document
@@ -36,7 +36,7 @@ always_allow_html: yes
  
 ## Εισαγωγή
 
-Η ευρωπαϊκή καστανιά (_Castanea sativa_ Mill.) είναι ένα από τα πιο διαδεδομένα και οικονομικά σημαντικά είδη της λεκάνης της Μεσογείου. Εκμεταλλεύεται τόσο για τους καρπούς της όσο και για την ξυλεία της και για αυτό το λόγο καλλιεργείται σε περιοχές πλέον της μεσογειακής ζώνης [@fernandez-lopez_castanea_2003]. 
+Η ευρωπαϊκή καστανιά (_Castanea sativa_ Mill.) είναι ένα από τα πιο διαδεδομένα και οικονομικά σημαντικά είδη της λεκάνης της Μεσογείου. Εκμεταλλεύεται τόσο για τους καρπούς της όσο και για την ξυλεία της και για αυτό το λόγο καλλιεργείται σε περιοχές πλέον της μεσογειακής ζώνης [@fernandez-lopez_euforgen_2003]. 
 Η εκτεταμένη καλλιέργεια και μεταφορά φυτογενετικού υλικού καστανιάς από τον άνθρωπο ήδη από την αρχαιότητα, έχει αφήσει το στίγμα της στην εξελικτική πορεία του είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απωλέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθιδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003]. 
 
 Αυτή η τάση παρατηρείται σε διάφορες διαβαθμίσεις και στους καστανεώνες της χώρας μας οι οποίοι μπορούν να διακριθούν σε δύο κατηγορίες: εντατικώς καλλιεργούμενοι (εμπορικώς εκμεταλλευόμενα εμβόλια σε επιλεγμένα υποκείμενα εντός αγροτικών γαιών) και εκτατικώς καλλιεργούμενοι (εμβόλια από επιλεγμένο υλικό τοπικής προέλευσης σε υποκείμενα άγριου τύπου εντός των δασών).
