fixed bibliography issues and title size in overleaf for the .tex file

--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -81,7 +81,7 @@
   \title{Ανάλυση γενετικής ποικιλότητας και γονιδιακής ροής καστανεώνα και
 απομονωμένου φυσικού πληθυσμού καστανιάς στη νήσο Λέσβο με ουδέτερους
 και μη μοριακούς δείκτες}
-    \pretitle{\vspace{\droptitle}\centering\huge}
+    \pretitle{\vspace{\droptitle}\centering\Large}
   \posttitle{\par}
   \subtitle{~}
   \author{Νικόλαος Τουρβάς}
@@ -148,7 +148,7 @@ al., 2010). Ένα πρόβλημα που είναι δυνατόν να προ
 ευρωπαϊκούς πληθυσμούς σε Ιταλία και Γαλλία σε σχέση με πληθυσμούς
 προερχόμενους από την Τουρκία. Οι ελληνικοί πληθυσμοί του είδους έχουν
 διερευνηθεί σε μελέτες (Aravanopoulos and Drouzas, 2005; Aravanopoulos
-et al., 2005, 2010, 2001) κυρίως με τη χρήση αλληλοενζύμων. Τα τελευταία
+et al., 2001, 2005, 2010) κυρίως με τη χρήση αλληλοενζύμων. Τα τελευταία
 χρόνια εμφανίζεται πληθώρα εργασιών στη διεθνή βιβλιογραφία με αναλύσεις
 σύγχρονων μοριακών δεικτών όπως οι μικροδορυφόροι (SSR) (Buck et al.,
 2003; Marinoni et al., 2003; Martin et al., 2010; Mattioni et al., 2008,
@@ -407,7 +407,7 @@ temperate zone : An updated review. \emph{197}, 257--271.
 \leavevmode\hypertarget{ref-marinoni_development_2003}{}%
 Marinoni, D., Akkak, A., Bounous, G., Edwards, K.J., and Botta, R.
 (2003). Development and characterization of microsatellite markers in
-Castanea sativa (Mill.). Molecular Breeding \emph{11}, 127--136.
+\textit{Castanea sativa} (Mill.). Molecular Breeding \emph{11}, 127--136.
 
 \leavevmode\hypertarget{ref-martin_identification_2009}{}%
 Martin, M.A., Alvarez, J.B., Mattioni, C., Cherubini, M., Villani, F.,
@@ -424,7 +424,7 @@ of genomic and genic microsatellite markers. Tree Genetics \& Genomes
 
 \leavevmode\hypertarget{ref-Mattioni2008}{}%
 Mattioni, C., Cherubini, M., Micheli, E., Villani, F., and Bucci, G.
-(2008). Role of domestication in shaping \emph{Castanea} \emph{sativa}
+(2008). Role of domestication in shaping \textit{Castanea} \textit{sativa}
 genetic variation in Europe. Tree Genetics \& Genomes \emph{4},
 563--574.
 
